# android_touch

./: .gitignore  README.md  settings.gradle
accessibility-service/: README.md  build.gradle
accessibility-service/src/main/: AndroidManifest.xml
accessibility-service/src/main/java/io/github/androidtouch/accessibility/: AndroidTouchAccessibilityService.java  GestureHttpServer.java  GestureParseException.java  GestureResult.java  MainActivity.java  Screenshotter.java  TouchGesture.java  UiActions.java  UiNodeMatcher.java  UiTreeBuilder.java
accessibility-service/src/main/res/values/: strings.xml  styles.xml
accessibility-service/src/main/res/xml/: accessibility_service_config.xml
mcp_server/: README.md  pyproject.toml
mcp_server/android_touch_mcp/: __init__.py  server.py  tool_schemas.py
memory/: PRD.md
python_api/: README.md  perception.py  pyproject.toml
python_api/android_touch/: __init__.py  _http.py  cli.py  device.py  errors.py  types.py
python_api/tests/: test_device.py
